--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,9 @@
 body {
     text-align: center;
     font-family: "Arial";
-    color: rebeccapurple;
+    color: green;
+}
+
+#rama {
+    color: saddlebrown;
 }
